# ProjetoEinstain

./: README.md  main.py  pyproject.toml
.github/workflows/: teste.yml
review/: README.md
review/source/: app.py  filesystem.py
source/: app.py  filesystem.py  gui.py  statistics.py
