[tool.poetry]
name = "projetoeinstain"
version = "0.1.0"
description = ""
authors = ["Gabriel Viana Boaes <viana_gab2001@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.0.10"
et-xmlfile = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
